@@ -1,3 +1,8 @@
+2004-08-25  John Luke  <john.luke@gmail.com>
+
+	* glib/MainLoop.cs: MainLoop implementation by Jeroen
+	[Fixes #61493]
+
 2004-08-24  Mike Kestner  <mkestner@ximian.com>
 
 	* gtk/Gtk.metadata : kill TreeDataList and TreeDataSortHeader
